# GenesiOS

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  COMO-USAR-GENESI-CALAMARES-CONFIG.md  CONFIGURAR-VM-VIRTUALBOX.md  CONTRIBUTING.md  CORRECAO-WM-CONNECTION.md  CORRECOES-ISO.md  CRIAR-ISO.md  DIAGNOSTICO-ISO-ERROR.md  FIREFOX-NO-ISO.md  FLUXO-COMPLETO.md  GENESI-BUILD-STRATEGY.md  GENESI-CALAMARES-CONFIG-SETUP.md  GUIA-CRIAR-ISO-VM.md  GUIA-RAPIDO.md  GUIA-REBUILD-RAPIDO.md  GUIA-TESTE-LOCAL.md  MODO-MANUAL.md  Makefile  PROXIMOS-PASSOS.md  QUICK-ISO-GUIDE.md  QUICK-START-WSL.md  README.md  RESUMO-CORRECOES.md  RESUMO-MUDANCAS-BROWSER.md  RESUMO-TESTES.md  SOLUCAO-PROBLEMAS.md  STATUS-ISO-BUILD.md  WSL-SETUP-GUIDE.md  build-iso-simple.sh  build-iso.sh  build.sh  check-build-logs.sh  check-gui.sh  cleanup  diagnostico-sway.sh  diagnostico.sh  fix-iso-boot-simple.sh  (+36 more)
.claude/: settings.local.json
.github/: README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  build-iso.yml  build-packages.yml  hygiene-check.yml  iso-pipeline.yml  pr-validation.yml  publish-apps.yml  publish-packages.yml  test-build.yml  test-llama-cpp.yml  test-packageinstaller.yml
.omc/: project-memory.json
.omc/state/: idle-notif-cooldown.json  last-tool-error.json
boot/: boot.asm
docs/: ROADMAP.md  faq.md  installation.md
genesi-arch/: .gitignore  AUTO-UPDATE-CHECKLIST.md  AUTO-UPDATE-DONE.md  BRANCH-INFO.md  IMPLEMENTATION-PLAN.md  INTEGRATION-GUIDE.md  PHASE2-COMPLETE.md  PUSH-AGORA.md  QUICK-START-AUTO-UPDATE.md  QUICK-START-PHASE2.md  README.md  RESPOSTA-DIRETA.md  build-genesi-arch.sh  build-local-packages.sh  buildiso.sh  debug-build.sh  debug-genesi.sh  packages.x86_64  pacman.conf  prepare-and-build.sh  profiledef.sh  test-auto-update.sh  test-local.sh  test-phase2.sh  util-iso.sh  verify-integration.sh
genesi-arch/archiso/: packages_desktop.x86_64  pacman.conf  profiledef.sh
genesi-arch/ci/: validate-install.sh
genesi-arch/docs/: AI-MODE-REFERENCE.md  AUTO-UPDATE-ARCHITECTURE.md  AUTO-UPDATE-SYSTEM.md  BUILD-ISO-NOW.md  CALAMARES-SETUP.md  CALAMARES-TODO.md  FIX-BUILD-ERROR.md  MANUAL-BUILD-GUIDE.md  PHASE2-AI-MODE.md  PHASE3-PACKAGES.md  REPOSITORY-SETUP.md  TEST-AUTO-UPDATE.md  TESTING-IN-VM.md  WORKFLOW-AUTO-UPDATE-SUMMARY.md
genesi-arch/grub/: grub.cfg
genesi-arch/syslinux/: archiso_sys-linux.cfg  syslinux.cfg
genesi-calamares/: .gitignore  AUTHORS  CHANGES-3.3  CHANGES-3.4  CONTRIBUTING.md  README.md  io.calamares.calamares.appdata.xml  settings.conf  settings_offline.conf  settings_online.conf
genesi-calamares/ci/: RELEASE.md  RELEASE.sh  build.sh  calamaresstyle
genesi-calamares/lang/: calamares_ar.ts  calamares_az.ts  calamares_cs_CZ.ts  calamares_eo.ts  calamares_es_AR.ts  calamares_et.ts  calamares_fi_FI.ts  calamares_fr.ts  calamares_hu.ts  calamares_is.ts  calamares_ja.ts  calamares_ka.ts  calamares_ko.ts  calamares_pt_BR.ts  calamares_pt_PT.ts  calamares_tg.ts  calamares_th.ts  calamares_uk.ts  calamares_zh_CN.ts
genesi-calamares/man/: calamares.8
genesi-desktop/: .gitignore  BROWSER-ARCHITECTURE.md  FIREFOX-SSD-FIX.md  package-lock.json  package.json  tailwind.config.js  test-firefox-ssd.sh  test.ts
genesi-desktop/genesi-desktop-gtk/: Cargo.toml  build.sh
genesi-desktop/genesi-desktop-gtk/resources/: style.css
genesi-desktop/genesi-desktop-gtk/src/: app.rs  config.rs  main.rs  utils.rs
genesi-desktop/genesi-desktop-gtk/src/components/: desktop.rs  dock.rs  file_explorer.rs  mod.rs  panel.rs
genesi-desktop/genesi-wm/: .gitignore  Cargo.toml  nocsd.c  test_wm
genesi-desktop/genesi-wm/src/: main.rs
genesi-desktop/src/: App.css  App.tsx  BrowserApp.tsx  ControlCenter.tsx  DisplayContext.tsx  FileExplorer.tsx  ImageViewer.tsx  NativeBrowserApp.tsx  SettingsApp.tsx  StartContextMenu.tsx  StartMenu.tsx  TaskManager.tsx  TerminalApp.tsx  TextEditor.tsx  ThemeContext.tsx  VideoPlayer.tsx  WaylandBrowserApp.tsx  WindowFrame.tsx  index.css  main.tsx
genesi-desktop/src-tauri/: Cargo.toml  tauri.conf.json
genesi-desktop/src-tauri/capabilities/: default.json
genesi-desktop/src-tauri/src/: lib.rs  main.rs
kernel/: kernel.c  kprintf.c
tools/: convert_icons.sh  grub.cfg  patch_taskbar.c  setup_toolchain.sh
(+391 files in other folders)
