[package]
name = "genesi-wm"
version = "0.1.0"
edition = "2021"
description = "Genesi OS Window Manager (Wayland Compositor)"

[dependencies]
# O coração do nosso sistema (Wayland compositor toolkit)
# Usando a versão de desenvolvimento do Smithay direto da branch principal
smithay = { git = "https://github.com/Smithay/smithay" }

# O protocolo Wayland oficial do Rust
wayland-server = "0.31.1"

# Para gerenciar o loop de eventos (cliques, movimentos, tela)
calloop = "0.13.0"

rustix = { version = "0.38.30", features = ["process", "fs"] }

# Para logs avançados
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
